Add 'Terms of Use' link to navigation and footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="index.html" class="text-2xl font-bold text-indigo-600">assetid.app</a>
             <nav>
                 <a href="privacy.html" class="text-sm md:text-base font-medium text-gray-600 hover:text-indigo-600 transition-colors">Privacy</a>
+                <a href="terms-of-use.html" class="text-sm md:text-base font-medium text-gray-600 hover:text-indigo-600 transition-colors ml-4">Terms of Use</a>
             </nav>
         </div>
     </header>
@@ -83,9 +84,11 @@
     <footer class="bg-white py-8 text-center text-sm text-gray-500">
         <div class="container mx-auto px-4">
             <p>&copy; 2025 Liberty Street Software. All rights reserved.</p>
-            <p class="mt-2"><a href="privacy.html" class="hover:text-indigo-600 transition-colors">Privacy Policy</a></p>
+            <p class="mt-2">
+                <a href="privacy.html" class="hover:text-indigo-600 transition-colors">Privacy Policy</a> | 
+                <a href="terms-of-use.html" class="hover:text-indigo-600 transition-colors">Terms of Use</a>
+            </p>
         </div>
     </footer>
 
 </body>
-</html>
