Update AI image identification service description

--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
                 For barcode lookup functionality, AssetManage ID may send product barcode information (UPC, EAN, or ISBN codes) to trusted third-party services to retrieve product names, descriptions, or images. We only send the barcode number and do not transmit any personally identifiable data.
             </p>
             <p class="text-lg leading-relaxed">
-                For AI image identification, our application may send images you upload to Google Gemini's API to analyze and identify the contents. We only send the image data itself and do not transmit any personally identifiable information in the process.
+                For AI image identification, our application may send images you upload to trusted third-party services to analyze and identify the contents. We only send the image data itself and do not transmit any personally identifiable information in the process.
             </p>
         </div>
 
