Wrap paragraph in a div for better layout
centered text

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-4">Your Assets, On Your Phone.</h1>
                 <!-- The image is now at 40% width and has a cursor pointer -->
                 <img id="mainImage" src="AssetManageID-Main.png" alt="Main interface of AssetManage ID app" class="w-[40%] mx-auto my-8 md:my-10 rounded-lg shadow-2xl cursor-pointer hover:scale-105 transition-transform" />
-                <p class="text-lg md:text-xl lg:text-2xl font-light mb-8 max-w-2xl">
-                    AssetManage ID is the companion app for AssetManage, allowing you to instantly view asset details on your iOS device.
-                </p>
+              <div class="flex justify-center">
+    <p class="text-lg md:text-xl lg:text-2xl font-light mb-8 max-w-2xl">
+        AssetManage ID is the companion app for AssetManage, allowing you to instantly view asset details on your iOS device.
+    </p>
+</div>
                 <!-- CTA Button -->
                 <a href="#" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg">
                     Download on the App Store
