Update privacy statement for AssetManage ID
small changes

--- a/privacy.html
+++ b/privacy.html
@@ -53,7 +53,7 @@
         <div class="mb-8">
             <h2 class="section-title">2. AssetManage ID Privacy</h2>
             <p class="text-lg leading-relaxed mb-4">
-                Any information you enter into your inventory in AssetManage ID is stored locally on your devices, on Apple’s iCloud servers (if sync or iCloud device backups are enabled), and/or on the devices of anyone you explicitly share your inventory with using the built-in sharing feature.
+                Any information you enter into your inventory in AssetManage ID is stored locally on your devices, on Apple’s iCloud servers (if sync or iCloud device backups are enabled).
             </p>
             <p class="text-lg leading-relaxed mb-4">
                 Liberty Street Software cannot view or access your inventory data in any way unless you explicitly share your inventory file with us for troubleshooting purposes. In these cases, we delete any copies once the problem is solved or if you request us to do so. You can also remove our access at any time.
