--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -25,7 +25,7 @@
         <section class="space-y-6 text-gray-700">
             <h2 class="text-2xl font-bold text-gray-900">1. Agreement to Terms</h2>
             <p>
-                By accessing or using the AssetManage ID mobile application ("App"), a product of Liberty Street Software, you agree to be bound by these Terms of Use ("Terms"). If you do not agree to these Terms, you may not access or use the App. These Terms constitute a legally binding agreement between you and Liberty Street Software (sole proprietorship of Paul Douglas Dembowski), 1477 Mississauga Valley Blvd. Mississauga, ON. L5A 3Y4.
+                By accessing or using the AssetManage ID mobile application ("App"), a product of Liberty Street Software, you agree to be bound by these Terms of Use ("Terms"). If you do not agree to these Terms, you may not access or use the App. These Terms constitute a legally binding agreement between you and Liberty Street Software (sole proprietorship of Paul Douglas Dembowski), 409-1477 Mississauga Valley Blvd. Mississauga, ON. L5A 3Y4.
             </p>
 
             <h2 class="text-2xl font-bold text-gray-900">2. Description of Service</h2>
