--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="index.html" class="text-2xl font-bold text-indigo-600">assetid.app</a>
             <nav>
                 <a href="privacy.html" class="text-sm md:text-base font-medium text-gray-600 hover:text-indigo-600 transition-colors">Privacy</a>
-                <a href="terms-of-use.html" class="text-sm md:text-base font-medium text-gray-600 hover:text-indigo-600 transition-colors ml-4">Terms of Use</a>
+                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" class="text-sm md:text-base font-medium text-gray-600 hover:text-indigo-600 transition-colors ml-4">Terms of Use</a>
             </nav>
         </div>
     </header>
@@ -95,7 +95,7 @@
             <p>&copy; 2025 Liberty Street Software. All rights reserved.</p>
             <p class="mt-2">
                 <a href="privacy.html" class="hover:text-indigo-600 transition-colors">Privacy Policy</a> | 
-                <a href="terms-of-use.html" class="hover:text-indigo-600 transition-colors">Terms of Use</a>
+                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" class="hover:text-indigo-600 transition-colors">Terms of Use</a>
             </p>
         </div>
     </footer>
