Update CTA button link to App Store

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </p>
 </div>
                 <!-- CTA Button -->
-                <a href="#" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg">
+                <a href="https://apps.apple.com/app/assetmanage-id/id6751895668" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg">
                     Download on the App Store
                 </a>
             </div>
