Enhance SEO with Open Graph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AssetManage ID - Scan and View Assets</title>
+
+  <meta property="og:title" content="AssetManage ID - AI Home and Business Inventory. For iPhone and iPad"/>
+    <meta property="og:description" content="AssetManage ID is an app for Home and Small Business Inventory, allowing you to instantly view asset details by scanning barcodes and using AI Image Recognition"/>
+    <meta property="og:image" content="https://assetid.app/AssetManageID-Main.png"/>
+    <meta property="og:url" content="https://assetid.app/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="AssetManage ID"/>
+
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@LibertyStreetSoft"/> <meta name="twitter:title" content="AssetManage ID - Scan and View Assets"/>
+    <meta name="twitter:description" content="Instantly view asset details by scanning barcodes and AI image recognition on your iOS device."/>
+    <meta name="twitter:image" content="https://assetid.app/AssetManageID-Main.png"/>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "AssetManage ID",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "iOS",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "reviewCount": "2"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0.00",
+        "priceCurrency": "USD"
+      },
+      "url": "https://assetid.app/",
+      "softwareRequirements": "Requires iOS 15.0 or later.",
+      "sameAs": "https://apps.apple.com/app/assetmanage-id/id6751895668",
+      "description": "AssetManage ID is an app for Home and Small Business Inventory, allowing you to instantly view asset details by scanning barcodes and using AI Image Recognition",
+      "screenshot": "https://assetid.app/AssetManageID-Main.png",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Liberty Street Software",
+        "url": "https://www.libertystreet.com/"
+      }
+    }
+    </script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
