Update header text for iPhone and iPad compatibility

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <main class="flex-grow">
         <section class="py-16 md:py-24 bg-gradient-to-br from-indigo-500 to-purple-600 text-white flex flex-col items-center justify-center text-center px-4">
             <div class="container mx-auto">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-4">Your Assets, On Your Phone.</h1>
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-4">Your Assets, On Your iPhone&trade; or iPad&trade;.</h1>
                 <!-- The image is now at 40% width and has a cursor pointer -->
                 <img id="mainImage" src="AssetManageID-Main.png" alt="Main interface of AssetManage ID app" class="w-[40%] mx-auto my-8 md:my-10 rounded-lg shadow-2xl cursor-pointer hover:scale-105 transition-transform" />
               <div class="flex justify-center">
