Add canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:site" content="@LibertyStreetSoft"/> <meta name="twitter:title" content="AssetManage ID - Scan and View Assets"/>
     <meta name="twitter:description" content="Instantly view asset details by scanning barcodes and AI image recognition on your iOS device."/>
     <meta name="twitter:image" content="https://assetid.app/AssetManageID-Main.png"/>
+    <link rel="canonical" href="https://assetid.app/" />
 
     <script type="application/ld+json">
     {
