Revise AssetManage ID description for clarity

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
                 <img id="mainImage" src="AssetManageID-Main.png" alt="Main interface of AssetManage ID app" class="w-[40%] mx-auto my-8 md:my-10 rounded-lg shadow-2xl cursor-pointer hover:scale-105 transition-transform" />
               <div class="flex justify-center">
     <p class="text-lg md:text-xl lg:text-2xl font-light mb-8 max-w-2xl">
-        AssetManage ID is the companion app for AssetManage, allowing you to instantly view asset details on your iOS device.
+AssetManage ID: The perfect solution for managing your assets on the go.
+
+Designed for iPhone&trade; and iPad&trade;, AssetManage ID allows you to instantly view asset details, perform barcode lookups, and utilize AI asset identification. The robust reporting features provide you with comprehensive insights, making asset management simpler and more efficient than ever.
+        
     </p>
 </div>
                 <!-- CTA Button -->
