Revise asset management description for clarity
Updated paragraph styling for better readability with smaller font, left-alignment, and added line breaks.

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-4">Your Assets, On Your iPhone&trade; or iPad&trade;.</h1>
                                 <img id="mainImage" src="AssetManageID-Main.png" alt="Main interface of AssetManage ID app" class="w-[40%] mx-auto my-8 md:my-10 rounded-lg shadow-2xl cursor-pointer hover:scale-105 transition-transform" />
                 <div class="flex justify-center">
-                    <p class="text-lg md:text-xl lg:text-2xl font-light mb-8 max-w-2xl">
-                        AssetManage ID: The perfect solution for managing your assets on the go.
-Designed for iPhone&trade; and iPad&trade;, AssetManage ID allows you to instantly view asset details, perform barcode lookups, and utilize AI asset identification. The robust reporting features provide you with comprehensive insights, making asset management simpler and more efficient than ever.
-                    </p>
+                   <!-- Updated paragraph: smaller font, left-aligned, line breaks added -->
+ <p class="text-base md:text-lg lg:text-xl font-light mb-8 max-w-2xl text-left leading-relaxed">
+     AssetManage ID: The perfect solution for managing your assets on the go.<br><br>
+     Designed for iPhone&trade; and iPad&trade;, AssetManage ID allows you to instantly view asset details, perform barcode lookups, and utilize AI asset identification.<br><br>
+     The robust reporting features provide you with comprehensive insights, making asset management simpler and more efficient than ever.
+ </p>
                 </div>
                                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
                     <a href="https://apps.apple.com/app/assetmanage-id/id6751895668" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg">
