--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
  </p>
                 </div>
                                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                    <a href="https://apps.apple.com/app/assetmanage-id/id6751895668" class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg">
-                        Download on the App Store
-                    </a>
-                    <a href="https://www.youtube.com/@AssetManageID" class="bg-white text-red-600 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="h-6 w-6 fill-current">
-                            <path d="M549.655 124.083c-6.281-23.65-24.787-42.156-48.437-48.437C434.928 69.279 288 69.279 288 69.279s-146.928 0-213.218 6.368c-23.649 6.281-42.156 24.787-48.437 48.437C0 178.655 0 256 0 256s0 77.345 6.368 100.995c6.281 23.65 24.787 42.156 48.437 48.437C141.072 442.721 288 442.721 288 442.721s146.928 0 213.218-6.368c23.649-6.281 42.156-24.787 48.437-48.437C576 333.345 576 256 576 256s0-77.345-6.345-100.995zm-317.51 213.504L337.568 256 232.145 186.417v149.169z"/>
-                        </svg>
-                        Watch on YouTube
-                    </a>
+                    <!-- Reduced horizontal padding (px-8 -> px-5) and slightly smaller text -->
+  <a href="https://apps.apple.com/app/assetmanage-id/id6751895668" class="bg-white text-indigo-600 font-semibold py-3 px-5 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-base">
+      Download on the App Store
+  </a>
+  <a href="https://www.youtube.com/@AssetManageID" class="bg-white text-red-600 font-semibold py-3 px-5 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-base flex items-center gap-2">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="h-5 w-5 fill-current">
+          <path d="M549.655 124.083c-6.281-23.65-24.787-42.156-48.437-48.437C434.928 69.279 288 69.279 288 69.279s-146.928 0-213.218 6.368c-23.649 6.281-42.156 24.787-48.437 48.437C0 178.655 0 256 0 256s0 77.345 6.368 100.995c6.281 23.65 24.787 42.156 48.437 48.437C141.072 442.721 288 442.721 288 442.721s146.928 0 213.218-6.368c23.649-6.281 42.156-24.787 48.437-48.437C576 333.345 576 256 576 256s0-77.345-6.345-100.995zm-317.51 213.504L337.568 256 232.145 186.417v149.169z"/>
+      </svg>
+      Watch on YouTube
+  </a>
                 </div>
             </div>
         </section>
