Update index.html with YouTube subscription link
Removed App Store link and added YouTube subscription button with styling.

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
  </p>
                 </div>
                                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                    <!-- Reduced horizontal padding (px-8 -> px-5) and slightly smaller text -->
-    <a href="https://apps.apple.com/us/app/assetmanage-id/id6751895668?itscg=30200&itsct=apps_box_badge&mttnsubad=6751895668" style="display: inline-block;">
-    <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1758067200" alt="Download on the App Store" style="width: 246px; height: 82px; vertical-align: middle; object-fit: contain;" />
-    </a>
-
-                                         <script src="https://apis.google.com/js/platform.js"></script>
+<a href="https://www.youtube.com/@AssetManageID?sub_confirmation=1" 
+     target="_blank" 
+     style="display: inline-flex; align-items: center; background-color: #cc0000; color: white; padding: 6px 12px; text-decoration: none; font-weight: bold; font-family: Arial, sans-serif; font-size: 13px; border-radius: 2px;">
+    <img src="https://www.gstatic.com/youtube/img/branding/favicon/favicon_144x144.png" alt="Play" style="width: 20px; height: 20px; margin-right: 5px; vertical-align: middle;">
+    Subscribe
+  </a>
 
 <div class="g-ytsubscribe" data-channel="AssetManageID" data-layout="default" data-theme="dark" data-count="default"></div>
 
