Add App Store badge to index.html
Added App Store badge link with reduced padding and smaller text.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
      The robust reporting features provide you with comprehensive insights, making asset management simpler and more efficient than ever.
  </p>
                 </div>
+          <!-- Reduced horizontal padding (px-8 -> px-5) and slightly smaller text -->
+    <a href="https://apps.apple.com/us/app/assetmanage-id/id6751895668?itscg=30200&itsct=apps_box_badge&mttnsubad=6751895668" style="display: inline-block;">
+    <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1758067200" alt="Download on the App Store" style="width: 246px; height: 82px; vertical-align: middle; object-fit: contain;" />
+    </a>
+
+                     
                                 <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
 <a href="https://www.youtube.com/@AssetManageID?sub_confirmation=1" 
      target="_blank" 
